# alibabacloud-eventbridge-sdk

./: .codecov.yml  .eslintrc  .gitignore  .travis.yml  ChangLog.txt  README-CN.md  README.md  Teafile  composer.json  main.tea  package.json  ut.sh
cpp/: CMakeLists.txt  README-CN.md  README.md
cpp/cmake/: alibabacloud_event_bridgeConfig.cmake.in
cpp/src/: event_bridge.cpp
csharp/: ChangeLog.txt  README-CN.md  README.md  eventbridge.sln
csharp/core/: EventBridgeClient.cs  IEventBridgeClient.cs  eventbridge.csproj
csharp/tests/: ClientTest.cs  tests.csproj
examples/: .gitignore
examples/cpp/: CMakeLists.txt
examples/cpp/cmake/: alibabacloud_sampleConfig.cmake.in
examples/cpp/include/alibabacloud/: sample.hpp
examples/cpp/src/: sample.cpp
examples/csharp/: Client.cs  test.csproj
examples/golang/: client.go  go.mod
examples/java/: pom.xml
examples/php/: README-CN.md  autoload.php  composer.json
examples/python/: client.py  requirements.txt
examples/ts/: package.json
golang/: README-CN.md  README.md  go.mod
golang/client/: client.go
golang/eventbridge/: client.go  client_test.go
golang/util/: util.go
java/: README-CN.md  README.md  pom.xml
meta/: putEvents.yaml  putEventsToAccount.yaml  putEventsToAccountByCache.yaml  queryEventBridgeStatus.yaml
meta/event/: queryEventTraces.yaml  (+2 more)
php/: README-CN.md  README.md  autoload.php  composer.json
python/: README-CN.md  README.md  setup.py
test/: Teafile  bus.tea  events.tea  main.tea  rule.tea  target.tea
ts/: README-CN.md  README.md  package.json
util/: Teafile  main.tea
(+464 files in other folders)
